# regj-2020

./: .gitignore  gulpfile.js  package.json
art/: bullet_travel.pyxel  entities.pyxel  player.pyxel
backend/: Cargo.toml
backend/src/: main.rs
frontend/: PIXI.js  app.js  bullet.js  constants.js  easings.js  entity.js  game.js  hazard.js  input.js  levels.js  player.js  score.js  spritesheetSprite.js  title.js  tower.js  wave.js
frontend/spritesheets/: bulletTravel.js  entities.js  index.js  player.js
static/public/: index.html
static/public/assets/: lilian.fnt
tools/sqlite3/: sqlite3.exp  sqlite3.lib
